services/tls/paperless-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    ingress.kubernetes.io/secure-backends: true
  labels:
    app.kubernetes.io/name: paperless
  name: paperless
  namespace: home
spec:
  rules:
    - host: papers.ocelotspot.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: paperless
              port:
                number: 80
  tls:
    - hosts:
        - papers.ocelotspot.com
      secretName: "papers.ocelotspot.com-tls"
